# KernelLab

./: .gitignore  README.md  bench.ipynb  todo.md
CUDA/DLops/attn/include/: util.cuh
CUDA/DLops/attn/src/: attn_naive.cu
CUDA/DLops/conv_2d/: CMakeLists.txt
CUDA/DLops/conv_2d/benchmark/: benchmark.cu
CUDA/DLops/conv_2d/include/: conv_kernel.h
CUDA/DLops/conv_2d/src/: coal_tiled_conv.cu  naive_conv.cu  tensor_conv.cu
CUDA/DLops/relu/: CMakeLists.txt
CUDA/DLops/relu/benchmark/: bench.py  benchmark.cu
CUDA/DLops/relu/include/: relu_kernel.h
CUDA/DLops/relu/src/: relu_fp16x8.cu  relu_optim.cu
CUDA/DLops/rmsnorm/include/: common.h  util.cuh
CUDA/DLops/rmsnorm/python/: benchmark.py  setup.py
CUDA/DLops/rmsnorm/src/: bench.cu  binding.cu  naive_rms.cuh  optim_rms.cuh  rmsnorm_vec_fp16.cuh
CUDA/DLops/rope/python/: benchmark.py  setup.py
CUDA/DLops/rope/src/: bench.cu  binding.cu  rope_fp16.cuh
CUDA/DLops/sigmoid/src/temp/: fp16  naive  vec
CUDA/DLops/softmax/: CMakeLists.txt  a.out
CUDA/DLops/softmax/benchmark/: main.cu
CUDA/DLops/softmax/include/: softmax_kernel.h
CUDA/DLops/softmax/src/: softmax_fp32.cu  softmax_shared.cu  softmax_sota.cu  trash.cu  util.cuh
CUDA/DLops/softmax/src/temp/: fp32  fshared
CUDA/LLMops/: util.cuh
CUDA/LLMops/attention/: vannila_attn.cu
CUDA/blas/mat_transpose/.cache/clangd/index/: __clang_cuda_builtin_vars.h.DE24545B951A2ABF.idx  __clang_cuda_cmath.h.39C5EA105AA6ED0D.idx  __clang_cuda_complex_builtins.h.3AA43D69EAAE9EB9.idx  (+189 more)
CUDA/blas/mat_transpose/include/: transpose_kernels.h
CUDA/blas/mat_transpose/src/: CMakeLists.txt  bench  benchmark.cu  cute_reg_trans.cu  cute_reg_trans.cuh  cute_trans_smem.cuh  cute_vec_trans.cuh  main.cu  naive_trans.cu  torch_trans.cuh
CUDA/blas/matmul/: CMakeLists.txt
CUDA/blas/matmul/matmul_kernel.egg-info/: top_level.txt
CUDA/blas/matmul/python/: benchmark.py  binding.cpp  setup.py
CUDA/blas/matmul/src/: benchmark2.cu  tiled_gemm.cu
CUDA/blas/reduction/max/include/: util.cuh
CUDA/blas/reduction/max/src/: a.out  block_reduce_max_fp32.cu
CUDA/blas/reduction/sum/src/: a.out  block_reduce_fp32.cu  idl.cu  matrix_per_row_sum_fp16.cu  reduction_naive.cu
CUDA/blas/vector_add/: a.out
CUDA/blas/vector_add/include/: vec_add_kernel.h
CUDA/blas/vector_add/python/: vec_add.py
CUDA/blas/vector_add/python/vec_add_kernels.egg-info/: SOURCES.txt
CUDA/blas/vector_add/src/: a.out  benchmark.cu  naive_vecadd.cu  tiling_vecadd.cu  util.cuh  vectorized_vecadd.nsys-rep
CUDA/blas/vector_add/src/temp_build/: fp168  naive
CUDA/classic_algo/sort/src/: naive_sort.cu
CUDA/img_process/greyscale/: CMakeLists.txt  a.out  shared
CUDA/img_process/greyscale/greyscale_kernel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
CUDA/img_process/greyscale/include/: greyscale_kernel.h
CUDA/img_process/greyscale/src/: benchmark.cu  fma_greyscale.cu  mutlipixel_greysc.cu
CUDA/img_process/img_blur/: setup.py  test.py
CUDA/img_process/img_blur/optim/: blur_optim.cu
DLops/conv_2d/include/: conv_kernel.cuh
DLops/conv_2d/src/: tiled_conv.cu
DLops/conv_3d/include/: conv_3d_kernel.h
DLops/conv_3d/src/: conv_naive.cu  conv_optim.cu  conv_shared.cu  conv_tiled.cu
DLops/relu/: CMakeLists.txt
DLops/relu/benchmark/: benchmark.cu
DLops/relu/include/: relu_kernel.h
DLops/relu/src/: relu_naive.cu  relu_optim.cu  relu_vectorized.cu
DLops/rmsnorm/include/: util.cuh
DLops/rmsnorm/src/: naive_rms.cu
DLops/sigmoid/src/: naive_sigmoid.cu  sigmoid_fp16x2x8.cu  sigmoide_fp32x4x4.cu  util.cuh
DLops/softmax/: CMakeLists.txt
DLops/softmax/benchmark/: main.cu  results.py
DLops/softmax/src/: softmax_block.cu  softmax_fp16.cu  softmax_naive.cu  softmax_shared.cu  softmax_sota.cu  softmax_warp.cu  util.cuh
DLops/swiglu/include/: util.cuh
DLops/swiglu/src/: rough.cu  swiglu_fp32.cu
LLMops/attention/: attn.cu
Triton/DLops/: geglu.py  layernorm.py  layernorm_fwd.py  softmax.py
Triton/LLMops/: flash_attn.py  rope.py  swiglu.py
Triton/blas/: matmul.py  vector_add.py
blas/mat_transpose/: CMakeLists.txt  a.out
blas/mat_transpose/src/: shared_coal_trans.cu
blas/matmul/: a.out  gem  gemm  regblock.ptx  report1.nsys-rep
blas/matmul/include/: gemm_kernel.h
blas/matmul/matmul_kernel.egg-info/: PKG-INFO  SOURCES.txt
blas/matmul/python/: matmul_test.py
blas/matmul/src/: benchmark.cu  optim_tiled_gemm.cu  regblock_gemm.cu  warp_tiling_gemm.cu  wmma_gemm.cu
blas/reduction/max/include/: util.cuh
blas/reduction/max/src/: block_reduce_max_fp32.cu  block_reduce_max_fp32x16.cu  block_reduce_max_fp32x4.cu  block_reduce_max_fp32x4_warpdiv.cu
blas/reduction/sum/: red
blas/reduction/sum/benchmark/: benchmark.cu
blas/reduction/sum/src/: block_reduce_fp16x2.cu  block_reduce_fp32_vectorized.cu  matrix_per_row_sum_fp16x2.cu  reduction_div.cu  util.cuh
blas/reduction/sum/src/temp/: fp32_vec
blas/reduction_sum/include/: reduction_kernels.h
blas/reduction_sum/src/: block_reduce_fp32.cu  block_reduce_fp32_vectorized.cu  reduction_warp.cu  util.cuh
blas/vector_add/python/vec_add_kernels.egg-info/: PKG-INFO  top_level.txt
blas/vector_add/src/: multielement_vecadd.cu  naive_vecadd.cu  util.cuh  vecadd_fp16x8.cu  vectorized_vecadd.cu
blas/vector_add/vec_add_kernels.egg-info/: SOURCES.txt
classic_algo/graph_algo/bfs/include/: bfs_kernel.h
classic_algo/graph_algo/bfs/src/: naive_bfs.cu
classic_algo/sort/src/: bitonic_sort.cu  optim_bitonic_sort.cu  raidix_sort.cu
img_process/greyscale/include/: greyscale_kernel.h
img_process/greyscale/python/: binding.cpp  setup.py  test.py
img_process/greyscale/src/: coalesced_greyscale.cu  mutlipixel_greysc.cu  naive_greyscale.cu  shared_greysc.cu  vectorized_greysc.cu
img_process/img_blur/naive/: blur_naive.cu
matmul/include/: gemm_kernel.h
matmul/src/: main.cu  naive_gemm.cu  optim_tiled_gemm.cu  tiled_gemm.cu  warp_tiling_gemm.cu
vector_add/python/: binding.cpp  setup.py  vec_add.py
vector_add/src/: main.cu  mem_coales_vecadd.cu  multielement_vecadd.cu  shared_mem_vecadd.cu  vectorized_vecadd.cu
(+8 files in other folders)
